--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -30,6 +30,6 @@ jobs:
 
           plugin_achievements: yes
           plugin_achievements_display: compact
-          plugin_achievements_secrets: yes
+          plugin_achievements_secrets: no
           plugin_achievements_threshold: C # Уровень сложности (C - легкий, B - средний, A - сложный)
 
